--- a/combined/app/src/main/AndroidManifest.xml
+++ b/combined/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
     <application
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="World Annotate"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <activity
             android:name=".DetectorActivity"
-            android:label="@string/activity_name_detection"
+            android:label="Annotate"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
